# rsb-manual

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.sphinx.in  README.md  api-cpp.html  api-cpp.rst  api-python.html  api.html  api.rst  build.sh  call.rst  common-command-line-options.html  common-command-line-options.rst  common.rst  concepts.html  concepts.rst  conf.py  conf.py.in  examples-basic.html  examples-basic.rst  examples-chat.html  examples-chat.rst  examples-converters.html  examples-converters.rst  examples-extension-points.html  examples-extension-points.rst  examples-plugins.html  examples-plugins.rst  examples-writing-converters.html  examples-writing-converters.rst  examples.html  examples.rst  formatting.rst  genindex.html  git.rst  glossary.html  (+93 more)
.doctrees/: api-python.doctree  api.doctree  common-command-line-options.doctree  concepts.doctree  examples-basic.doctree  examples-chat.doctree  examples-converters.doctree  examples-extension-points.doctree  examples-plugins.doctree  examples-writing-converters.doctree  examples.doctree  glossary.doctree  index.doctree  install-binary.doctree  install-cl.doctree  install-cpp.doctree  install-java.doctree  install-python.doctree  install-source.doctree  install.doctree  literature.doctree  news.doctree  specification-config.doctree  specification-converters.doctree  specification-event.doctree  specification-inprocess.doctree  specification-inter-transport-communication.doctree  specification-introspection.doctree  specification-multiple-transports.doctree  specification-plugin.doctree  specification-request-reply.doctree  specification-ros.doctree  specification-scope.doctree  specification-socket.doctree  specification-spread.doctree  specification-transport-level-filtering.doctree  specification-uris.doctree  specification-yarp.doctree  specification.doctree  support.doctree  (+11 more)
.doctrees/api/java/: packages.doctree
.doctrees/api/java/rsb/: AbstractActivatable.doctree  AbstractDataHandler.doctree  AbstractEventHandler.doctree  Activatable-State.doctree  Activatable.doctree  Event.doctree  EventId.doctree  Factory-ParticipantObserverManager.doctree  Factory.doctree  FilteringHandler.doctree  Handler.doctree  Informer.doctree  InformerCreateArgs.doctree  InitializeException.doctree  Listener.doctree  ListenerCreateArgs.doctree  LocalServerCreateArgs.doctree  MetaData.doctree  Participant.doctree  ParticipantCreateArgs.doctree  ParticipantId.doctree  ParticipantObserver.doctree  QualityOfServiceSpec-Ordering.doctree  QualityOfServiceSpec-Reliability.doctree  QualityOfServiceSpec.doctree  RSBException.doctree  ReaderCreateArgs.doctree  RemoteServerCreateArgs.doctree  Scope.doctree  Version.doctree  package-index.doctree
.doctrees/api/python/internal/: rsb.eventprocessing.doctree  rsb.introspection.doctree  rsb.transport.doctree  rsb.transport.local.doctree  rsb.transport.socket.doctree  rsb.util.doctree
.doctrees/api/python/user-level/: rsb.converter.doctree  rsb.doctree  rsb.filter.doctree  rsb.patterns.doctree  rsb.patterns.future.doctree  rsb.version.doctree
_images/: graphviz-214883c0dd41069bcc9b4e17f4c10f04f69c7b69.png.map  graphviz-60d704c1c4602dca8b5b8a0fd1a70886bd894021.png.map  graphviz-89ffbf71b5eeff9ff3a9a80284d4cc71552484fa.png.map  graphviz-b758c6450de80c8c4d4493aa7fb7d15d649dc1a8.png.map  graphviz-bb74cb543f33d3560d505fd942d0133a5dfb34b7.png.map  graphviz-e743420de3ba23c7ec56a070085bd044b53d2dd8.png.map
_sources/: api-python.rst.txt  examples-plugins.rst.txt  glossary.rst.txt  index.rst.txt  install-binary.rst.txt  install-source.rst.txt  install.rst.txt  specification-config.rst.txt  specification-inprocess.rst.txt  specification-plugin.rst.txt  specification-ros.rst.txt  specification-spread.rst.txt  specification-transport-level-filtering.rst.txt  specification.rst.txt  support.rst.txt  tool-bridge.rst.txt  tool-logger.rst.txt  tool-server.rst.txt  tool-timesync.rst.txt  troubleshooting.rst.txt
_sources/api/java/: packages.rst.txt
_sources/api/java/rsb/: AbstractActivatable.rst.txt  AbstractDataHandler.rst.txt  AbstractEventHandler.rst.txt  Activatable-State.rst.txt  Activatable.rst.txt  Event.rst.txt  EventId.rst.txt  Factory-ParticipantObserverManager.rst.txt  Factory.rst.txt  FilteringHandler.rst.txt  Handler.rst.txt  Informer.rst.txt  InformerCreateArgs.rst.txt  InitializeException.rst.txt  Listener.rst.txt  ListenerCreateArgs.rst.txt  LocalServerCreateArgs.rst.txt  MetaData.rst.txt  Participant.rst.txt  ParticipantCreateArgs.rst.txt  ParticipantId.rst.txt  ParticipantObserver.rst.txt  QualityOfServiceSpec-Ordering.rst.txt  QualityOfServiceSpec-Reliability.rst.txt  RSBException.rst.txt  (+6 more)
_static/: documentation_options.js  multi.js  style.css
_static/css/: style.css
_static/js/: multi.js
_templates/: footer.html  index.html  layout.html.in  links.html.in  page.html  rsblinks.html.in
api/java/: packages.html
api/java/rsb/: AbstractActivatable.html  AbstractDataHandler.html  AbstractEventHandler.html  Activatable-State.html  Activatable.html  Event.html  EventId.html  Factory-ParticipantObserverManager.html  Factory.html  FilteringHandler.html  Handler.html  Informer.html  InformerCreateArgs.html  InitializeException.html  Listener.html  ListenerCreateArgs.html  LocalServerCreateArgs.html  MetaData.html  Participant.html  ParticipantCreateArgs.html  ParticipantId.html  ParticipantObserver.html  QualityOfServiceSpec-Ordering.html  QualityOfServiceSpec-Reliability.html  QualityOfServiceSpec.html  RSBException.html  ReaderCreateArgs.html  RemoteServerCreateArgs.html  Scope.html  Version.html  package-index.html
api/python/internal/: rsb.eventprocessing.html  rsb.introspection.html  rsb.transport.html  rsb.transport.local.html  rsb.transport.socket.html  rsb.util.html
api/python/user-level/: rsb.converter.html  rsb.filter.html  rsb.html  rsb.patterns.future.html  rsb.patterns.html  rsb.version.html
corlab/static/: corlab.css
corlab_theme/static/: multi.js
sphinx-corlab-theme/: setup.py
sphinx-corlab-theme/corlab_theme/static/: multi.js
(+492 files in other folders)
